package main.ex1;

public class FileHandler {
}
